test: fix singleton brick definition